--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "repos/avalon-core"]
 	path = repos/avalon-core
 	url = git@github.com:pypeclub/avalon-core.git
-	branch = v2.11.8-pype
+	branch = develop
 [submodule "repos/pyblish-base"]
 	path = repos/pyblish-base
 	url = git@github.com:pyblish/pyblish-base.git
