remove pype-config and switch avalon-core to develop

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "repos/avalon-core"]
 	path = repos/avalon-core
 	url = git@github.com:pypeclub/avalon-core.git
-	branch = v2.11.8-pype
+	branch = develop
 [submodule "repos/pyblish-base"]
 	path = repos/pyblish-base
 	url = git@github.com:pyblish/pyblish-base.git
@@ -11,9 +11,6 @@
 [submodule "repos/maya-look-assigner"]
 	path = repos/maya-look-assigner
 	url = git@github.com:pypeclub/maya-look-assigner.git
-[submodule "repos/pype-config"]
-	path = repos/pype-config
-	url = git@github.com:pypeclub/pype-config.git
 [submodule "repos/acre"]
 	path = repos/acre
 	url = git@github.com:antirotor/acre.git
