runn all jsons through prettier

--- a/pype/hosts/premiere/extensions/com.pype/jsx/jsconfig.json
+++ b/pype/hosts/premiere/extensions/com.pype/jsx/jsconfig.json
@@ -1,9 +1,7 @@
 {
-	"compilerOptions": {
-		"noLib" : true,
-		"checkJs": true
-	},
-	"include": [
-		"**/*"
-	]
+    "compilerOptions": {
+        "noLib": true,
+        "checkJs": true
+    },
+    "include": ["**/*"]
 }
