move nuke setup to host

--- a/pype/settings/defaults/system_settings/applications.json
+++ b/pype/settings/defaults/system_settings/applications.json
@@ -241,8 +241,8 @@
                 ]
             },
             "NUKE_PATH": [
-                "{PYPE_MODULE_ROOT}/repos/avalon-core/setup/nuke/nuke_path",
-                "{PYPE_MODULE_ROOT}/setup/nuke/nuke_path",
+                "{PYPE_ROOT}/repos/avalon-core/setup/nuke/nuke_path",
+                "{PYPE_ROOT}/hosts/nuke/startup",
                 "{PYPE_STUDIO_PLUGINS}/nuke"
             ],
             "PATH": {
