fix nuke callbacks in 3.0

--- a/pype/settings/defaults/system_settings/applications.json
+++ b/pype/settings/defaults/system_settings/applications.json
@@ -242,7 +242,7 @@
             },
             "NUKE_PATH": [
                 "{PYPE_ROOT}/repos/avalon-core/setup/nuke/nuke_path",
-                "{PYPE_ROOT}/hosts/nuke/startup",
+                "{PYPE_ROOT}/pype/hosts/nuke/startup",
                 "{PYPE_STUDIO_PLUGINS}/nuke"
             ],
             "PATH": {
