--- a/.gitmodules
+++ b/.gitmodules
@@ -15,6 +15,15 @@
 	path = repos/acre
 	url = git@github.com:antirotor/acre.git
 	branch = fix/unformatted-tokens
+[submodule "pype/modules/ftrack/python2_vendor/ftrack-python-api"]
+	path = pype/modules/ftrack/python2_vendor/ftrack-python-api
+	url = https://bitbucket.org/ftrack/ftrack-python-api.git
 [submodule "pype/modules/ftrack/python2_vendor/arrow"]
 	path = pype/modules/ftrack/python2_vendor/arrow
 	url = git@github.com:arrow-py/arrow.git
+[submodule "pype/modules/ftrack/python2_vendor/backports.functools_lru_cache"]
+	path = pype/modules/ftrack/python2_vendor/backports.functools_lru_cache
+	url = git@github.com:PythonBackports/backports.functools_lru_cache.git
+[submodule "pype/modules/ftrack/python2_vendor/python-future"]
+	path = pype/modules/ftrack/python2_vendor/python-future
+	url = git@github.com:PythonCharmers/python-future.git
