minor fixes nuke

--- a/pype/settings/defaults/system_settings/applications.json
+++ b/pype/settings/defaults/system_settings/applications.json
@@ -237,7 +237,8 @@
             "__environment_keys__": {
                 "nuke": [
                     "NUKE_PATH",
-                    "PATH"
+                    "PATH",
+                    "LOGLEVEL"
                 ]
             },
             "NUKE_PATH": [
@@ -247,7 +248,8 @@
             ],
             "PATH": {
                 "windows": "C:/Program Files (x86)/QuickTime/QTSystem/;{PATH}"
-            }
+            },
+            "LOGLEVEL": "INFO"
         },
         "variants": {
             "nuke_12.2": {
@@ -788,9 +790,7 @@
                     "RESOLVE_DEV"
                 ]
             },
-            "RESOLVE_UTILITY_SCRIPTS_SOURCE_DIR": [
-                "{STUDIO_SOFT}/davinci_resolve/scripts/python"
-            ],
+            "RESOLVE_UTILITY_SCRIPTS_SOURCE_DIR": [],
             "RESOLVE_SCRIPT_API": {
                 "windows": "{PROGRAMDATA}/Blackmagic Design/DaVinci Resolve/Support/Developer/Scripting",
                 "darvin": "/Library/Application Support/Blackmagic Design/DaVinci Resolve/Developer/Scripting",
@@ -834,7 +834,12 @@
                 "variant_label": "16",
                 "icon": "",
                 "executables": {
-                    "windows": [],
+                    "windows": [
+                        [
+                            "C:/Program Files/Blackmagic Design/DaVinci Resolve/Resolve.exe",
+                            ""
+                        ]
+                    ],
                     "darwin": [],
                     "linux": []
                 },
