--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,9 @@ exclude =
 
 max-complexity = 30
 
+[pylint.'MESSAGES CONTROL']
+disable = no-member
+
 [pydocstyle]
 convention = google
 ignore = D107
@@ -20,3 +23,6 @@ omit = /tests
 
 [coverage:html]
 directory = ./coverage
+
+[tool:pytest]
+norecursedirs = repos/* pype/modules/ftrack/*
