--- a/pype/settings/defaults/system_settings/applications.json
+++ b/pype/settings/defaults/system_settings/applications.json
@@ -362,17 +362,19 @@
             "__environment_keys__": {
                 "nukex": [
                     "NUKE_PATH",
-                    "PATH"
+                    "PATH",
+                    "LOGLEVEL"
                 ]
             },
             "NUKE_PATH": [
-                "{PYPE_MODULE_ROOT}/repos/avalon-core/setup/nuke/nuke_path",
-                "{PYPE_MODULE_ROOT}/setup/nuke/nuke_path",
+                "{PYPE_ROOT}/repos/avalon-core/setup/nuke/nuke_path",
+                "{PYPE_ROOT}/pype/hosts/nuke/startup",
                 "{PYPE_STUDIO_PLUGINS}/nuke"
             ],
             "PATH": {
                 "windows": "C:/Program Files (x86)/QuickTime/QTSystem/;{PATH}"
-            }
+            },
+            "LOGLEVEL": "DEBUG"
         },
         "variants": {
             "nukex_12.2": {
@@ -488,18 +490,18 @@
                     "PATH",
                     "WORKFILES_STARTUP",
                     "TAG_ASSETBUILD_STARTUP",
-                    "PYPE_LOG_NO_COLORS"
+                    "LOGLEVEL"
                 ]
             },
             "HIERO_PLUGIN_PATH": [
-                "{PYPE_MODULE_ROOT}/setup/nukestudio/hiero_plugin_path"
+                "{PYPE_MODULE_ROOT}/setup/hiero/hiero_plugin_path"
             ],
             "PATH": {
                 "windows": "C:/Program Files (x86)/QuickTime/QTSystem/;{PATH}"
             },
             "WORKFILES_STARTUP": "0",
             "TAG_ASSETBUILD_STARTUP": "0",
-            "PYPE_LOG_NO_COLORS": "True"
+            "LOGLEVEL": "DEBUG"
         },
         "variants": {
             "nukestudio_12.2": {
@@ -610,18 +612,18 @@
                     "PATH",
                     "WORKFILES_STARTUP",
                     "TAG_ASSETBUILD_STARTUP",
-                    "PYPE_LOG_NO_COLORS"
+                    "LOGLEVEL"
                 ]
             },
             "HIERO_PLUGIN_PATH": [
-                "{PYPE_MODULE_ROOT}/setup/nukestudio/hiero_plugin_path"
+                "{PYPE_MODULE_ROOT}/setup/hiero/hiero_plugin_path"
             ],
             "PATH": {
                 "windows": "C:/Program Files (x86)/QuickTime/QTSystem/;{PATH}"
             },
             "WORKFILES_STARTUP": "0",
             "TAG_ASSETBUILD_STARTUP": "0",
-            "PYPE_LOG_NO_COLORS": "True"
+            "LOGLEVEL": "DEBUG"
         },
         "variants": {
             "hiero_12.2": {
