--- a/pype/settings/defaults/system_settings/applications.json
+++ b/pype/settings/defaults/system_settings/applications.json
@@ -17,7 +17,7 @@
                 ]
             },
             "PYTHONPATH": [
-                "{PYPE_ROOT}/pype/setup/maya",
+                "{PYPE_ROOT}/pype/hosts/maya/startup",
                 "{PYPE_REPOS_ROOT}/avalon-core/setup/maya",
                 "{PYPE_REPOS_ROOT}/maya-look-assigner",
                 "{PYTHONPATH}"
