--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,33 @@ license = "MIT License"
 
 [tool.poetry.dependencies]
 python = "3.7"
+aiohttp_json_rpc = "*" # TVPaint server
 acre = { git = "https://github.com/pypeclub/acre.git" }
 opentimelineio = { git = "https://github.com/pypeclub/OpenTimelineIO.git", branch="develop" }
 appdirs = "^1.4.3"
-arrow = "^0.15.5"
-certifi = "*"
+blessed = "^1.17" # pype terminal pretty printing
 clique = "1.5.*"
-Click = "^7"
+Click = "^7" # used by pype cli
+ftrack-python-api = "^2.1"
+google-api-python-client = "^1.12.8" # sync server google support (should be separate?)
+keyring = "^22.0.1"
+log4mongo = "^1.7"
+pathlib2= "^2.3.5" # deadline submit publish job only
+Pillow = "^8.1" # only used for slates prototype
+pyblish-base = "^1.8.8"
+pynput = "^1.7.2" # idle manager
+pymongo = "^3.11.2"
+pyqt5 = "^5.12.2" # ideally should be replaced with PySide2
+Qt.py = "^1.3.3"
+setuptools = "45.0.0" # explicit lock for python 2 compatibility
+speedcopy = "^2.1"
+six = "^1.15"
+wsrpc_aiohttp = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7"
 autopep8 = "^1.4"
+coverage = "*"
 cx_freeze = "^6.1"
 jedi = "^0.13"
 Jinja2 = "^2.11"
@@ -25,6 +41,15 @@ pycodestyle = "^2.5.0"
 pydocstyle = "^3.0.0"
 pylint = "^2.4.4"
 pytest = "^5.3.2"
+pytest-cov = "*"
+pytest-print = "*"
+Sphinx = "^1.6"
+sphinx-rtd-theme = "*"
+sphinxcontrib-websupport = "*"
+sphinx-qt-documentation = "*"
+recommonmark = "*"
+tqdm = "*"
+wheel = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
