--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,24 +11,24 @@ aiohttp_json_rpc = "*" # TVPaint server
 acre = { git = "https://github.com/pypeclub/acre.git" }
 opentimelineio = { git = "https://github.com/pypeclub/OpenTimelineIO.git", branch="develop" }
 appdirs = "^1.4.3"
-blessed = "^1.17" # pype terminal pretty printing
+blessed = "^1.17" # pype terminal formatting
 clique = "1.5.*"
-Click = "^7" # used by pype cli
+Click = "^7"
 ftrack-python-api = "^2.1"
 google-api-python-client = "^1.12.8" # sync server google support (should be separate?)
 keyring = "^22.0.1"
 log4mongo = "^1.7"
-pathlib2= "^2.3.5" # deadline submit publish job only
+pathlib2= "^2.3.5" # deadline submit publish job only (single place, maybe not needed?)
 Pillow = "^8.1" # only used for slates prototype
 pyblish-base = "^1.8.8"
-pynput = "^1.7.2" # idle manager
+pynput = "^1.7.2" # idle manager in tray
 pymongo = "^3.11.2"
 pyqt5 = "^5.12.2" # ideally should be replaced with PySide2
 Qt.py = "^1.3.3"
-setuptools = "45.0.0" # explicit lock for python 2 compatibility
+setuptools = "45.0.0" # explicit lock for python 2 compatibility in nuke
 speedcopy = "^2.1"
 six = "^1.15"
-wsrpc_aiohttp = "^3.1.1"
+wsrpc_aiohttp = "^3.1.1" # websocket server
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7"
